--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://your-backend.railway.app/api
+VITE_API_URL=https://acewaec-backend-1.onrender.com
+REACT_APP_API_URL=https://acewaec-backend-1.onrender.com
